<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.silence.activity.DetailActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@mipmap/bottom_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/btn_prev"
            style="@style/bottom_bar_style"
            android:drawableTop="@drawable/btn_previous_selector"
            android:text="@string/tv_back"
            />

        <TextView
            android:id="@+id/tv_play"
            style="@style/bottom_bar_style"
            android:drawableTop="@drawable/btn_play_selector"
            android:text="@string/tv_play"
            />

        <TextView
            android:id="@+id/btn_next"
            style="@style/bottom_bar_style"
            android:drawableTop="@drawable/btn_next_selector"
            android:text="@string/tv_next"
            />
    </LinearLayout>
</LinearLayout>
